--- a/DiscoveryService/Jenkinsfile
+++ b/DiscoveryService/Jenkinsfile
@@ -8,7 +8,7 @@ pipeline {
 	stages {
 		stage('SCM Checkout'){
 			steps{
-        	git credentialsId: 'gitPwd', url: 'https://github.com/KorbiO/imdp-latest'
+        	git url: 'https://github.com/KorbiO/E-shop-project/tree/master/DiscoveryService'
         		}
     }
 		stage('Compile') {
@@ -22,19 +22,19 @@ pipeline {
 		}
 		stage('Build Docker Image'){
 			steps{
-        		bat 'docker build -t omarkorbi/imdb:latest .'
+        		bat 'docker build -t omarkorbi/discovery-service:latest .'
         		}
     }
      stage('Push Docker Image'){
      	steps{
 	        bat 'docker login -u omarkorbi -p gotktpas123'
-	  		bat 'docker tag imdp:latest omarkorbi/imdp '
-	  		bat 'docker push omarkorbi/imdp'
+	  		bat 'docker tag discovery-service:latest omarkorbi/discovery-service '
+	  		bat 'docker push omarkorbi/discovery-service'
 	  		}
     }
-    stage('Run Container on Dev Server'){
+    stage('Run Kubernetes'){
     	steps{
-   	   		bat 'docker run -p 8761:8761 -d --name imdp omarkorbi/imdp:latest'
+   	   		bat 'kubectl apply -f deployment.yml'
    	   		}
     }
 		
